# monte-carlo-simulator

./: .gitignore  CMakeLists.txt  README.md  preview_test.json
.github/actions/build-and-test/: action.yml
.github/workflows/: README_RELEASE.md  release.yml  test.yml
compiler/: .gitignore  MANIFEST.in  README.md  a.json  a.vs  example.valuascript  example_v2.valuascript  example_v3.valuascript  example_v4.valuascript  main.py  pyproject.toml  requirements.txt  setup.py  valuascript.lark  vsc  vsc.py
compiler/tests/: ir_validator.py  test_boolean_logic_integration.py  test_compiler.py  test_conditionals.py  test_imports.py  test_integration.py  test_io_integration.py  test_modules.py  test_multi_assignment_and_tuples.py  test_nested_udf_inlining.py  test_server.py  test_user_defined_functions.py
compiler/tests/ast/: test_ast_phase.py
compiler/tests/bytecode_generator/: test_bytecode_generator.py  test_ir_lowerer.py  test_ir_lowerer_registry.py  test_resource_allocator.py
compiler/tests/end_to_end/: utils.py
compiler/tests/funcitons/: test_epidemiology_functions.py  test_financial_functions.py  test_io_functions.py
compiler/tests/ir_generation/: test_ir_generation.py  test_ir_generation_edge_cases.py
compiler/tests/optimizer/: test_alias_resolver.py  test_constant_folding.py  test_constant_folding_extended.py  test_copy_propagation.py  test_dead_code_elimination.py  test_identity_elimination.py  test_ir_validator.py  test_tuple_forwarding.py
compiler/tests/parser/: test_parsing_phase.py
compiler/tests/partitioner/: test_ir_partitioner.py  test_ir_partitioner_edge_cases.py
compiler/tests/pipeline/: test_multi_return_handling.py
compiler/tests/stochasticity_tainting/: test_stochasticity_tainting.py
compiler/tests/symbol_discover/: test_symbol_discovery.py
compiler/tests/type_inference/: test_type_inference.py
compiler/tests/validator/: test_semantic_validator.py  test_validator_edge_cases.py
compiler/vsc/: __init__.py  bytecode_generator.py  cli.py  compiler.py  config.py  data_structures.py  exceptions.py  ir_generator.py  ir_optimizer.py  ir_partitioner.py  linker.py  optimizer.py  parser.py  semantic_analyzer.py  semantic_validator.py  server.py  symbol_discovery.py  type_inferrer.py  utils.py  validator.py  valuascript.lark
compiler/vsc/bytecode_generation/: code_emitter.py  ir_lowerer.py  opcodes.py  resource_allocator.py  test_code_emitter.py  test_code_emitter_edge_cases.py
compiler/vsc/functions/: __init__.py  core.py  financial.py  io.py  series.py  statistics.py  vector.py
compiler/vsc/optimizer/: alias_resolver.py  constant_folding.py  copy_propagation.py  dead_code_elimination.py  identity_elimination.py  ir_validator.py  tuple_forwarding.py
compiler/vsc/parser/: classes.py  dataclasses.py  helpers.py  (+3 more)
engine/: CMakeLists.txt
engine/include/engine/: ExecutionSteps.h  IExecutionStep.h  SimulationEngine.h  io.h  operations.h  samplers.h
engine/include/engine/core/: DataStructures.h  EngineException.h  Errors.h  ExecutionSteps.h  IExecutable.h  IExecutionStep.h  SimulationEngine.h  datastructures.h
engine/include/engine/functions/: FunctionRegistry.h  operations.h  samplers.h
engine/include/engine/functions/core/: operations.h
engine/include/engine/functions/epidemiology/: SirModel.h  epidemiology.h  epidemiology_registration.h
engine/include/engine/functions/financial/: BlackScholes.h  financial.h  financial_registration.h
engine/include/engine/functions/io/: operations.h
engine/include/engine/functions/series/: operations.h
engine/include/engine/functions/statistics/: samplers.h
engine/include/engine/io/: io.h
engine/src/: main.cpp
engine/src/engine/: SimulationEngine.cpp  io.cpp
engine/src/engine/core/: ExecutionSteps.cpp  SimulationEngine.cpp
engine/src/engine/functions/: FunctionRegistry.cpp  comparison_operations.cpp  io_operations.cpp  math_operations.cpp  operations.cpp  samplers.cpp  series_operations.cpp
engine/src/engine/functions/core/: core.cpp
engine/src/engine/functions/epidemiology/: SirModel.cpp  epidemiology.cpp
engine/src/engine/functions/financial/: BlackScholes.cpp  financial.cpp
engine/src/engine/functions/io/: io.cpp
engine/src/engine/functions/series/: series.cpp
engine/src/engine/functions/statistics/: statistics.cpp
engine/src/engine/io/: io.cpp
engine/test/: engine_tests.cpp  test_conditionals.cpp  test_errors.cpp  test_helpers.h  test_io.cpp  test_operations.cpp  test_preview.cpp  test_samplers.cpp
engine/test/core/: test_errors.cpp  test_multi_assignment.cpp  test_output_writer.cpp  test_preview.cpp
engine/test/functions/core/: test_arithmetic_ops.cpp  test_conditionals.cpp  test_simple_ops.cpp
engine/test/functions/epidemiology/: test_sir_model.cpp
engine/test/functions/financial/: test_black_scholes.cpp
engine/test/functions/io/: test_io_ops.cpp
engine/test/functions/series/: test_series_ops.cpp
engine/test/functions/statistics/: test_samplers.cpp
examples/: amazon_dcf.vs  test.vs
extension/: CHANGELOG.md  LICENSE  README.md  language-configuration.json  language-spec.json  package-lock.json  package.json  snippets.json
extension/icons/: valuascript-icon-theme.json
extension/scripts/: build-grammar.js
extension/src/: extension.ts
extension/syntaxes/: valuascript.tmLanguage.json  valuascript.tmLanguage.template.json
include/distributions/: BernoulliDistribution.h  BetaDistribution.h  IDistribution.h  LognormalDistribution.h  NormalDistribution.h  PertDistribution.h  TriangularDistribution.h  UniformDistribution.h
include/engine/: ExecutionSteps.h  IExecutable.h  IExecutionStep.h  IOperation.h  SimulationEngine.h  datastructures.h  io.h  operations.h  samplers.h
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: main.cpp
src/distributions/: BernoulliDistribution.cpp  BetaDistribution.cpp  LognormalDistribution.cpp  NormalDistribution.cpp  PertDistribution.cpp  TriangularDistribution.cpp  UniformDistribution.cpp
src/engine/: SimulationEngine.cpp  io.cpp
test/: distributions_tests.cpp  engine_tests.cpp
(+83 files in other folders)
